--- a/styles.css
+++ b/styles.css
@@ -96,5 +96,5 @@ code {
 blockquote {
     border: 1px solid gray;
     padding: 3px;
-    background-color: #333333;
+    background-color: lightgray;
 }
