--- a/styles.css
+++ b/styles.css
@@ -82,18 +82,9 @@ body {
     padding:10px;
     margin-left:2em;
 }
-pre {
-    padding:0;
-    margin:0;
-}
-code {
-    padding: 5px;
-    border: 3px solid;
-    border-color:black;
-    background-color:beige;
-}
-
-blockquote {
+pre,blockquote {
+    overflow-wrap: anywhere;
+    margin:1em;
     border: 1px solid gray;
     padding: 3px;
     background-color: lightgray;
